kubernetes/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring-ingress
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

    - host: prometheus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

    - host: alertmanager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
